Removed unnecessary features, fixed case-sensitivity issue, fixed cursor, added some spacing, added custom scrollbar.

--- a/flexing.css
+++ b/flexing.css
@@ -155,7 +155,7 @@ div a{
     color:var(--primary) !important;
 }
 .error a{
-    color:var(--primary) !Important;
+    color:var(--primaryVariant) !Important;
 }
 
 img {
